--- a/OCamlWithWeakTypeVariables/dune-project
+++ b/OCamlWithWeakTypeVariables/dune-project
@@ -6,19 +6,18 @@
 
 (license LGPL-3.0-or-later)
 
-(authors "FIXME Vasya Pupkin")
+(authors "Dmitry Shestakov")
 
-(maintainers "FIXME Vasya Pupkin")
+(maintainers "Dmitry Shestakov")
 
-(bug_reports "FIXME where to put bug reports about the code")
+(bug_reports "https://github.com/wokuparalyzed/fp2023/issues")
 
-(homepage "FIXME Homepage")
+(homepage "https://github.com/wokuparalyzed/fp2023")
 
 (package
- (name Lambda) ; FIXME and regenerate .opam file using 'dune build @install'
- (synopsis "FIXME An interpreter for language")
- (description
-  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
+ (name OCamlWithWeakTypeVariables)
+ (synopsis "OCaml with weak type variables")
+ (description "OCaml with weak type variables support (not really)")
  (version 0.1)
  (depends
   dune
@@ -28,7 +27,4 @@
   ppx_deriving
   bisect_ppx
   (odoc :with-doc)
-  (ocamlformat :build)
-  ; base
-  ; After adding dependencies to 'dune' files and the same dependecies here too
-  ))
+  (ocamlformat :build)))
